--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,9 +4,6 @@
 @import '../../../../node_modules/@swimlane/ngx-datatable/assets/icons.css';
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
 
-// Arquivo: login.scss
-
-
 
 /* Estilos para o loader */
 /* Estilos para o loader */
@@ -33,21 +30,20 @@
   }
 }
 
-
-
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
 
-
-// Estilos para o contêiner principal
 .login-container {
+  background: linear-gradient(to bottom, rgb(114, 124, 245), rgb(57, 176, 218));
   display: flex;
-  justify-content: center; // Centraliza horizontalmente
-  align-items: center; // Centraliza verticalmente
+  align-items: center;
+  justify-content: center;
   height: 100vh; // Ocupa a altura total da tela
-  background-color: #f0f0f0; // Cor de fundo (opcional)
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 // Estilos para o formulário de login
@@ -75,7 +71,7 @@
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+ // border: 1px solid #ccc;
   border-radius: 5px;
 }
 
@@ -100,18 +96,6 @@
   color: #333;
 }
 
-
-
-
-.login-container {
-  background: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  // Outros estilos...
-}
-
-
 .login-form.active {
   transform: translateY(0);
 }
@@ -135,11 +119,6 @@
   100% { transform: rotate(360deg); }
 }
 
-.login-container {
-  background: linear-gradient(to bottom, rgb(114, 124, 245), rgb(57, 176, 218));  // Outros estilos...
-}
-
-
 /* Estilos para o botão "Entrar" com a cor roxa do seu logo */
 .fade_8S {
   width: 120px; /* Largura menor */
@@ -161,7 +140,7 @@
 .fade_9S {
   width: 120px; /* Largura menor */
   background-color: rgb(57, 176, 218); /* Azul mais claro */
-    color: white;
+  color: white;
   border: none;
   border-radius: 5px;
   padding: 5px; /* Espaçamento menor */
@@ -175,20 +154,12 @@
 
 }
 
-
 html, body {
   height: 100vh;
   margin: 0;
   font-family: Arial, sans-serif;
 }
 
-/* Estilos para o container de login */
-.login-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}qV B
 
 html {
   background-color: rgb(57, 176, 218);
@@ -214,7 +185,6 @@ h2 {
   margin: 5 nnnnnnnpx 8px 10px 8px; 
   color: #cccccc;
 }
-
 
 
 /* STRUCTURE */
@@ -575,3 +545,13 @@ border-radius: 5px;
 display: flex;
 margin-top: 5px;
 }
+
+.login-input:focus {
+  transform: scale(1.05); /* Aumenta o tamanho do input */
+  border-color: rgb(114, 124, 245); /* Muda a cor da borda para indicar foco */
+  box-shadow: 0 0 5px rgb(57, 176, 218); /* Adiciona um sombreamento para destacar */
+  outline: none; /* Remove o contorno padrão */
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Suaviza a transição */
+}
+
+
