--- a/src/app/pages/gestao-paciente/paciente/paciente.component.scss
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.scss
@@ -18,6 +18,43 @@
   }
 }
 
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Suaviza a transição de transformação e sombra */
+}
+
+.card:hover {
+  transform: scale(1.05); /* Aumenta ligeiramente o tamanho do card */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra para um efeito de elevação */
+}
+
+
+.card-text {
+  white-space: nowrap; /* Mantém o texto em uma única linha */
+  overflow: hidden;    /* Esconde qualquer conteúdo que ultrapasse o elemento */
+  text-overflow: ellipsis; /* Adiciona reticências ao final do texto truncado */
+}
+
+/* Estilos para o loader */
+/* Estilos para o loader */
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 16px solid rgb(114, 124, 245); /* Azul claro */
+  border-top: 16px solid rgb(57, 176, 218); /* Azul mais escuro */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  z-index: 9999;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 :host ::ng-deep .ngx-datatable.bootstrap {
   border: 1px solid #d1d4d7;
   box-shadow: 0 1px 2px 0 rgba(50,50,50,.2);
