--- a/src/app/pages/configurar-agenda/parametrizar-plano/parametrizar-plano.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-plano/parametrizar-plano.component.html
@@ -137,6 +137,22 @@
                           Prevent Senior</label>
                       </div>
                     </div>
+                    <div class="form-group col-md-3">
+                      <div class="form-group">
+                        <label class="form-check-label">
+                          <input class="form-check-input" type="checkbox" id="cemig" name="optcheckbox"
+                            value="10" (click)="funcValor($event.target.value, $event.target)" />
+                          Cemig</label>
+                      </div>
+                    </div>
+                    <div class="form-group col-md-3">
+                      <div class="form-group">
+                        <label class="form-check-label">
+                          <input class="form-check-input" type="checkbox" id="cassi" name="optcheckbox"
+                            value="11" (click)="funcValor($event.target.value, $event.target)" />
+                          Cassi</label>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
