--- a/src/app/pages/atendimento/antecipar-atendimento/antecipar-atendimento.component.scss
+++ b/src/app/pages/atendimento/antecipar-atendimento/antecipar-atendimento.component.scss
@@ -17,26 +17,6 @@
   }
 }
 
-/* Estilos para o loader */
-/* Estilos para o loader */
-.loader {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 16px solid rgb(114, 124, 245); /* Azul claro */
-  border-top: 16px solid rgb(57, 176, 218); /* Azul mais escuro */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  z-index: 9999;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
 :host ::ng-deep .ngx-datatable.bootstrap {
   border: 1px solid #d1d4d7;
@@ -111,10 +91,158 @@
   border: none !important;
 }
 
+.card-pendente {
+  background-color: #fd220549;
+  /* Outros estilos para o card cinza, se necessário */
+}
+.card-bloqueado {
+  background-color: #7774773f;
+  /* Outros estilos para o card cinza, se necessário */
+}
+
+.card-livre{
+background-color: #07c28373;
+/* Outros estilos para o card cinza, se necessário */
+}
+
+.card-confirmada{
+  background-color: rgba(114, 125, 245, 0.452)
+  /* Outros estilos para o card cinza, se necessário */
+  }
+
+.card-finalizado{
+  background-color: #54dfb03b;
+  /* Outros estilos para o card cinza, se necessário */
+  }
+
 :host ::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-box-actions .btn:focus{
   outline: none !important;
   box-shadow: none !important;
 }
+
+/* Estilo padrão para dispositivos não móveis */
+.card {
+  height: auto;
+}
+.arrow {
+  display: inline-block;
+  transition: transform 0.2s;
+}
+
+.collapse:not(.show) .arrow {
+  transform: rotate(-90deg);
+}
+
+.collapse.show .arrow {
+  transform: rotate(0deg);
+}
+
+/* Estilos para o loader */
+/* Estilos para o loader */
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 16px solid rgb(114, 124, 245); /* Azul claro */
+  border-top: 16px solid rgb(57, 176, 218); /* Azul mais escuro */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  z-index: 9999;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.card-text {
+  white-space: nowrap; /* Mantém o texto em uma única linha */
+  overflow: hidden;    /* Esconde qualquer conteúdo que ultrapasse o elemento */
+  text-overflow: ellipsis; /* Adiciona reticências ao final do texto truncado */
+}
+
+
+/* Estilo para dispositivos móveis com largura de tela menor que 768px */
+@media (max-width: 820px) {
+  .card {
+    height: auto;
+  }
+  .card-text{
+    max-width: 250px;    /* Define uma largura máxima para o nome */
+  }
+}
+
+.button {
+  margin-top: 5px;
+}
+
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Suaviza a transição de transformação e sombra */
+}
+
+.card:hover {
+  transform: scale(1.05); /* Aumenta ligeiramente o tamanho do card */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra para um efeito de elevação */
+}
+
+
+.cor-box {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+.card-pendente {
+  background-image: linear-gradient(to right, #fd220531, #fd220515);
+}
+
+.card-bloqueado {
+  background-image: linear-gradient(to right, #77747762, #77747723);
+}
+
+.card-livre { 
+  background-image: linear-gradient(to right, #07c284d7, #07c28373);
+}
+
+.card-confirmada {
+  background-image: linear-gradient(to right, #727df573, rgba(114, 125, 245, 0.199));
+}
+
+.card-finalizado {
+  background-image: linear-gradient(to right, #54dfb1a9, #54dfb03b);
+}
+
+/* Ajuste a largura do contêiner conforme necessário */
+.legenda-container {
+  display: flex;
+  flex-wrap: wrap; /* Permite que os itens sejam quebrados em linhas múltiplas */
+  align-items: center; /* Alinha verticalmente */
+  gap: 10px; /* Espaço entre os itens da legenda */
+}
+
+.legenda-item {
+  flex: 1; /* Distribui o espaço disponível igualmente entre os itens */
+  display: flex;
+  align-items: center; /* Alinha verticalmente o texto e a caixa de cor */
+}
+
+
+.cor-box {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+/* Estilos específicos para telas com largura máxima de 768px (dispositivos móveis) */
+@media screen and (max-width: 768px) {
+  .button {
+    margin-top: 20px; /* Reduz a margem para 0 em telas móveis */
+  }
+}
+
 
 :host ::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-box-actions .btn:hover{
   text-decoration: none;
@@ -194,6 +322,18 @@ nb-checkbox {
     padding-bottom: 0;
   }
 
+  .legend {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+  
+  .legend p {
+    margin-right: 15px; /* Ajuste conforme necessário */
+    margin-bottom: 10px; /* Ajuste conforme necessário */
+  }
+  
+
 @include nb-install-component() {
 
     display: block;
@@ -202,20 +342,5 @@ nb-checkbox {
 
   }
 
-  .div-tamanho{
-    font-size: 12px;
-    text-align: left;
-  }
 
-  .image{
-    color: rgb(0, 255, 255);
-  }
 
-  .card-ocupado {
-    background-color: rgb(253, 243, 243);
-    pointer-events: none; /* Impede que o card seja clicável */
-}
-
-.card-disponivel {
-  background-color: white;
- }
