--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -115,6 +115,9 @@
                   <button class="btn btn-warning ml-2 button" (click)="BloquearAtendimento()">
                     Bloquear
                   </button>
+                  <button class="btn btn-danger ml-2 button" (click)="AnteciparAtendimento()">
+                    Fila
+                  </button>
                 </div>
               </div>
             </div>
