--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,6 +26,8 @@
       <div class="login-links">
           <button class="fade_9S" (click)="recuperarSenha()">Resetar Senha</button>
       </div>
+      <h2>Versão 1.0</h2>
+
   </div>
 </div>
 
