--- a/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
+++ b/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
@@ -356,22 +356,86 @@
                                     <h5>Agendamento de Retorno:</h5>
                                 </div>
 
-                                                                    
                                 <div class="form-group align-items-center">
-                                    <label class="encaixe">Deseja Agendar o Retorno?*</label>
-                                    <div class="p-1 row mb-lg-n1">
-                                      <label class="radio-inline pl-3">
-                                        <input class="mat-button" type="radio" id="AgendarRetornoSim" name="agendarRetorno"
-                                               value="S" formControlName="agendarRetorno" (click)="agendarRetorno('S',formConsultaPaciente.value)" />
-                                        Sim
-                                      </label>
-                                      <label class="radio-inline pl-2">
-                                        <input class="mat-button" type="radio" id="AgendarRetornoNao" name="agendarRetorno"
-                                               value="N" formControlName="agendarRetorno" (click)="agendarRetorno('N',formConsultaPaciente.value)" />
-                                        Não
-                                      </label>
+                                  <div class="row">
+                                    <div class="col-md-4">
+                                      <label class="encaixe">Deseja Agendar o Retorno?*</label>
+                                      <div class="d-flex align-items-center">
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input" type="radio" id="AgendarRetornoSim" name="agendarRetorno" value="S" formControlName="agendarRetorno" (click)="agendarRetorno('S',formConsultaPaciente.value)">
+                                          <label class="form-check-label" for="AgendarRetornoSim">Sim</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input" type="radio" id="AgendarRetornoNao" name="agendarRetorno" value="N" formControlName="agendarRetorno" (click)="agendarRetorno('N',formConsultaPaciente.value)">
+                                          <label class="form-check-label" for="AgendarRetornoNao">Não</label>
+                                        </div>
+                                      </div>
                                     </div>
+                                    <div class="col-md-4" *ngIf="isretorno">
+                                      <label class="encaixe">Será de Encaixe?*</label>
+                                      <div class="d-flex align-items-center">
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input" type="radio" id="AgendarencaixeSim" name="encaixe" value="S" formControlName="encaixe" (click)="agendarencaixe('S',formConsultaPaciente.value)">
+                                          <label class="form-check-label" for="AgendarencaixeSim">Sim</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                          <input class="form-check-input" type="radio" id="AgendarencaixeNao" name="encaixe" value="N" formControlName="encaixe" (click)="agendarencaixe('N',formConsultaPaciente.value)">
+                                          <label class="form-check-label" for="AgendarencaixeNao">Não</label>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  
+                                    <div class="col-md-4" *ngIf="isEncaixe1">
+                                              <section class="align-items-center">
+                                                  <div class="col-md-12 col-xs-12">
+                                                      <form #card="ngForm">
+                                                          <label for="dataInicio">Informe o Horário que Deseja o Encaixe: </label>
+                                                          <div class="form-row">
+                                                              <section class="border-dark btn paragraph-2 mb-3"
+                                                                  style="background-color: white;"
+                                                                  *ngFor="let card of tipoCardEncaixe; let i = index;"
+                                                                  >
+                                                                  <div class="col-md-12">
+                                                                      <label for="horaInicio">Hora de Início</label>
+                                                                      <div class="row pl-3">
+                                                                          <input type="time" name="appt" required
+                                                                              name="card{{card.id}}"
+                                                                              [(ngModel)]="card.horaInicio" />
+                                                                      </div>
+                                                                  </div>
+                                                                  <div class="col-md-12">
+                                                                      <label for="horaFim">Hora Fim</label>
+                                                                      <div class="row pl-3">
+                                                                          <input type="time" name="appt" required
+                                                                              name="car{{card.id}}"
+                                                                              [(ngModel)]="card.horaFim" />
+                                                                      </div>
+                                                                  </div>
+                                                                  <div class="form-group">
+                                                                      <button class="btn btn-primary mt-2"
+                                                                          (click)="pesquisarHorario(formConsultaPaciente.value,card)">
+                                                                          Pesquisar
+                                                                      </button>
+                                                                  </div>
+                                                              </section>
+                                                          </div>
+                                                      </form>
+                                                  </div>
+                                              </section>
+                                      </div>
                                   </div>
+                                  <div class="form-row align-items-center" *ngIf="isEncaixe2">
+                                    <div class="form-group col-md-4">
+                                        <div class="form-group">
+                                            <label for="horarioSelected">Horário Selecionado:</label>
+                                            <input class="form-control" name="horarioSelected" id="horarioSelected "
+                                            type="text" formControlName="horarioSelected" [value]="horarioSelecionado" disabled />
+                                        </div>
+                                    </div>
+                                
+                                </div>
+                                </div>
+                                
 
                                 <div *ngIf="isHorario">
                                     <div class="form-group col-md-6">
@@ -405,17 +469,6 @@
                                             </div>
                                         </div>
                                     </div>                                
-                                <div *ngIf="isConfAtendimento">
-                                    <div class="form-row align-items-center">
-                                        <div class="form-group col-md-4">
-                                            <div class="form-group">
-                                                <label for="horarioSelected">Horário Selecionado:</label>
-                                                <input class="form-control" name="horarioSelected" id="horarioSelected "
-                                                type="text" formControlName="horarioSelected" [value]="horarioSelecionado" disabled />
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
 
                             </nb-card-body>
                         </nb-card>
