--- a/src/app/pages/configurar-agenda/visualizar-dia-atendimento/visualizar-dia-atendimento.component.scss
+++ b/src/app/pages/configurar-agenda/visualizar-dia-atendimento/visualizar-dia-atendimento.component.scss
@@ -6,6 +6,28 @@ nb-card-body {
       margin-top: 1rem;
     }
   }
+
+  
+/* Estilos para o loader */
+/* Estilos para o loader */
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 16px solid rgb(114, 124, 245); /* Azul claro */
+  border-top: 16px solid rgb(57, 176, 218); /* Azul mais escuro */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  z-index: 9999;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
   
   .full-name-inputs,
   .validation-checkboxes {
