--- a/src/app/pages/atendimento/antecipar-atendimento/antecipar-atendimento.component.html
+++ b/src/app/pages/atendimento/antecipar-atendimento/antecipar-atendimento.component.html
@@ -6,14 +6,20 @@
         <nb-card>
           <nb-card-body>
             <form id=“form-buscar-atendimento” [formGroup]="formBuscarAtendimento">
-              
-              <div class="form-group">
-                <h5>Fila de Prioridades de Reagendamentos</h5>
-              </div>
-
+              <div class="form-row align-items-center">
+                <nb-card-header class="aditi-header">
+                    <div class="back-link">
+                        <a class="m-lg-n3" (click)="previousPage()" aria-label="back">
+                            <nb-icon icon="arrow-back" title="voltar"></nb-icon>
+                        </a>
+                    </div>
+                </nb-card-header>
+                <div class="form-group col-md-6">
+                    <h5 class="pt-3">Fila de Prioridades de Reagendamentos</h5>
+                </div>
+            </div>
               <div class="col-md-12 col-xs-12">
                 <div>
-
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-4 ">
                     <div class="form-group">
