--- a/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
+++ b/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
@@ -17,7 +17,7 @@
                                         </div>
                                     </nb-card-header>
                                     <div class="form-group col-md-6">
-                                        <h5 class="pt-3">Agendar Consulta</h5>
+                                        <h5 class="pt-3">Agendar Atendimento</h5>
                                     </div>
                                 </div>
                                 <div class="form-row align-items-center">
